--- a/Module5/scss/_large.scss
+++ b/Module5/scss/_large.scss
@@ -12,6 +12,4 @@
     nav ul li:last-child a {border-right: 1px solid #777;}
     nav ul li a{padding: .5rem 1rem;}
     
-    picture.founder-image { width: 50%;}
-    
     div.news {column-count: 1;}
